|#0|Updated specification for CommTrack APIs

--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -1,6 +1,5 @@
-Coming Soon
-=======
-# Create Satellite Facility API
+
+# Register agent (satellite facility) API
 
 ### Communication Type
 
@@ -9,16 +8,15 @@ Coming Soon
 ### Parameters
 
 systemID - Mandatory
-authtoken - Mandatory
-userID - Mandatory
-parentFacilityID - Mandatory
-facilityTypeID - Mandatory (Need to Discuss)
-firstName - Mandatory
-PrimaryPhoneNumber - Optional
+authToken - Mandatory
+agentCode - Mandatory
+agentName - Mandatory
+baseFacilityCode - Mandatory
+PhoneNumber - Mandatory
 
 ### Return
 
-satelliteFacilityId
+"Success" or "Error" code
 
 ### Dependencies
 
@@ -26,5 +24,10 @@ systemID
 
 ### Notes
 
-CommTrack will store satelliteFacilityId & UserId mapping & provide satelliteFacilityId while submitting report to OpenLMIS.
+CommTrack will use this API to notify OpenLMIS everytime a new CHW is created. OpenLMIS will store agentCode as an identifier for this CHW/satellite facility and use it to match up successive reports coming from CHW.
+Error scenarios :-
+1) Invalid authToken
+2) Any mandatory field missing
+3) Duplicate agentCode
+3) Invalid baseFacility Code ( baseFacility not existing in openLMIS ) 
 
