+Swapnil| updating doc

--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -6,13 +6,13 @@
 
 ### Parameters
 
-systemID - Mandatory
-authToken - Mandatory
-agentCode - Mandatory
-agentName - Mandatory
-baseFacilityCode - Mandatory
-PhoneNumber - Mandatory
-agentStatus (Active/inactive) - Mandatory
+- systemID - Mandatory
+- authToken - Mandatory
+- agentCode - Mandatory
+- agentName - Mandatory
+- baseFacilityCode - Mandatory
+- PhoneNumber - Mandatory
+- agentStatus (Active/inactive) - Mandatory
 
 ### Return
 
