--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -6,12 +6,12 @@
 
 ### Parameters
 
-systemID - Mandatory
-authToken - Mandatory
-agentCode - Mandatory
-agentName - Mandatory
-baseFacilityCode - Mandatory
-PhoneNumber - Mandatory
+- systemID - Mandatory
+- authToken - Mandatory
+- agentCode - Mandatory
+- agentName - Mandatory
+- baseFacilityCode - Mandatory
+- PhoneNumber - Mandatory
 
 ### Return
 
