--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -11,7 +11,7 @@
 - agentCode - Mandatory
 - agentName - Mandatory
 - baseFacilityCode - Mandatory
-- PhoneNumber - Mandatory
+- phoneNumber - Optional
 
 ### Return
 
