--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -11,7 +11,7 @@
 - agentCode - Mandatory
 - agentName - Mandatory
 - baseFacilityCode - Mandatory
-- PhoneNumber - Optional  
+- phoneNumber - Optional  
 - agentStatus (Active/inactive) - Mandatory
 
 ### Return
