--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -26,7 +26,7 @@ systemID
 
 CommTrack will use this API to notify OpenLMIS of updates to CHW.
 Error scenarios :-
-1) Invalid authToken
-2) Any mandatory field missing
-3) Invalid agentCode
-3) Invalid baseFacility Code ( baseFacility not existing in openLMIS ) 
+- Invalid authToken
+-  Any mandatory field missing
+-  Invalid agentCode
+-  Invalid baseFacility Code ( baseFacility not existing in openLMIS ) 
