--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -6,8 +6,7 @@
 
 ### Parameters
 
-- systemID - Mandatory
-- authToken - Mandatory
+- Authentication token (Base64 encrypted string containing username:password)
 - agentCode - Mandatory
 - agentName - Mandatory
 - baseFacilityCode - Mandatory
