--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -16,10 +16,6 @@
 
 "Success" or "Error" code
 
-### Dependencies
-
-systemID
-
 ### Notes
 
 CommTrack will use this API to notify OpenLMIS everytime a new CHW is created. OpenLMIS will store agentCode as an identifier for this CHW/satellite facility and use it to match up successive reports coming from CHW.
@@ -32,4 +28,6 @@ Error scenarios :-
 3) Duplicate agentCode
 
 3) Invalid baseFacility Code ( baseFacility not existing in openLMIS ) 
+
+### JSON: Coming soon
 
