--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -16,6 +16,13 @@
 
 "Success" or "Error" code
 
+### Error scenarios
+
+- Invalid authentication
+- Any mandatory field missing
+- Invalid baseFacilityCode
+- agentCode already exists
+
 ### Notes
 
 CommTrack will use this API to notify OpenLMIS everytime a new CHW is created. OpenLMIS will store agentCode as an identifier for this CHW/satellite facility and use it to match up successive reports coming from CHW.
@@ -27,7 +34,7 @@ Error scenarios :-
 
 3) Duplicate agentCode
 
-3) Invalid baseFacility Code ( baseFacility not existing in openLMIS ) 
+4) Invalid baseFacility Code ( baseFacility not existing in openLMIS ) 
 
 ### JSON: Coming soon
 
