--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -11,15 +11,19 @@
 - agentName - Mandatory
 - baseFacilityCode - Mandatory
 - phoneNumber - Optional  
-- agentStatus (Active/inactive) - Mandatory
+- agentStatus - Mandatory - {Active | Inactive}
 
 ### Return
 
 "Success" or "Error" code
 
-### Dependencies
+### Error scenarios
 
-systemID
+- Invalid authentication
+- Invalid agentCode
+- Any mandatory field missing
+- Invalid baseFacilityCode
+- Invalid agentStatus
 
 ### Notes
 
@@ -29,3 +33,5 @@ Error scenarios :-
 -  Any mandatory field missing
 -  Invalid agentCode
 -  Invalid baseFacility Code ( baseFacility not existing in openLMIS ) 
+
+### JSON: Coming soon
