--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -1,4 +1,4 @@
-# Register agent (satellite facility) API
+# Create satellite facility API
 
 ### Communication Type
 
@@ -11,6 +11,7 @@
 - agentName - Mandatory
 - baseFacilityCode - Mandatory
 - phoneNumber - Optional
+- isActive - Optional (By default will be considered as "active")
 
 ### Return
 
