--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -1,4 +1,4 @@
-# Update agent (satellite facility) API
+# Update satellite facility API
 
 ### Communication Type
 
@@ -11,7 +11,7 @@
 - agentName - Mandatory
 - baseFacilityCode - Mandatory
 - phoneNumber - Optional  
-- agentStatus - Mandatory - {Active | Inactive}
+- isActive - Mandatory 
 
 ### Return
 
