--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -4,10 +4,13 @@
 
 - HTTP PUT, to OpenLMIS
 
-### Parameters
+### Authentication
 
 - Authentication token (Base64 encrypted string containing username:password)
-- agentCode - Mandatory
+
+### Parameters
+
+- agentCode - Mandatory ( reference to update below fields)
 - agentName - Mandatory
 - baseFacilityCode - Mandatory
 - phoneNumber - Optional  
