--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -24,6 +24,7 @@
 
 - Invalid authentication
 - Invalid agentCode
+- Agent code is not tagged as satellite facility in OpenLMIS
 - Any mandatory field missing
 - Invalid baseFacilityCode
 - Invalid agentStatus
