--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -23,6 +23,8 @@
 - Any mandatory field missing
 - Invalid baseFacilityCode
 - agentCode already exists
+- Malformed JSON
+- Unrecognized field
 
 ### Notes
 
