--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -15,6 +15,9 @@
 - baseFacilityCode - Mandatory
 - phoneNumber - Optional  
 - isActive - Mandatory 
+- Malformed JSON
+- Unrecognized field
+
 
 ### Return
 
