--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -11,7 +11,7 @@
 - agentName - Mandatory
 - baseFacilityCode - Mandatory
 - phoneNumber - Optional
-- isActive - Optional (By default will be considered as "active")
+- Active - Optional (By default will be considered as "active")
 
 ### Return
 
