--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -14,7 +14,7 @@
 - agentName - Mandatory
 - baseFacilityCode - Mandatory
 - phoneNumber - Optional  
-- isActive - Mandatory 
+- Active - Mandatory 
 - Malformed JSON
 - Unrecognized field
 
