Updated API Authentication

--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -3,10 +3,13 @@
 ### Communication Type
 
 - HTTP Post, to OpenLMIS
+ 
+### Authentication
+
+- Authentication token (Base64 encrypted string containing username:password)
 
 ### Parameters
 
-- Authentication token (Base64 encrypted string containing username:password)
 - agentCode - Mandatory
 - agentName - Mandatory
 - baseFacilityCode - Mandatory
