--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -24,26 +24,21 @@
 
 #### Invalid authentication  
 Response: Authentication Failed  
-Description: This error can be caused by an incorrect API username, an incorrect API password,  
-or an invalid API signature. Make sure that all three of these values are correct.
+Description: This error can be caused by an incorrect API username, an incorrect API password, or an invalid API signature. Make sure that all three of these values are correct.
 
 ####Any mandatory field missing
 Response: Mandatory field Missing  
-Description: This error will occur if any of the manadatory field (agentCode, agentName or baseFacilityCode)   
-is either null or tag is missing.
+Description: This error will occur if any of the manadatory field (agentCode, agentName or baseFacilityCode) is either null or tag is missing.
 
 ####Invalid baseFacilityCode
-Response: Invalid baseFacilityCode
-Description: basefacilityCode is the facilityCode of facilities registered in OpenLMIS and sent to CommTrack as part of  
-"facilityMasterFeed". This error will occur if:-  
+Response: Invalid baseFacilityCode  
+Description: basefacilityCode is the facilityCode of facilities registered in OpenLMIS and sent to CommTrack as part of "facilityMasterFeed". This error will occur if:-  
 a) basefacilityCode in the API does not exist in OpenLMIS.  
-b) basefacilityCode in the API is a virtual facility registered earlier in OpenLMIS. As a CHW (virtual facility) cannot  
-be mapped to another CHW, OpenLMIS will check that baseFacilityCode should not be a virtual facility.
+b) basefacilityCode in the API is a virtual facility registered earlier in OpenLMIS. As a CHW (virtual facility) cannot be mapped to another CHW, OpenLMIS will check that baseFacilityCode should not be a virtual facility.
 
 #### agentCode already exists
 Response: Agent already registered  
-Description: This error will occur if "createVirtualFacility" request is received with a agentCode that is already   
-registered in OpenLMIS. An agent can be updated by "updatevirtualFacility" API.
+Description: This error will occur if "createVirtualFacility" request is received with a agentCode that is already registered in OpenLMIS. An agent can be updated by "updatevirtualFacility" API.
 
 #### Malformed JSON
 Response: Invalid JSON  
