--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -25,7 +25,7 @@
 #### 1) *Invalid authentication*  
 **Response**:    
 {  
-   "error": "Invalid base facility code"  
+   "error": "Authentication Failed"  
 }   
 **Description**: This error can be caused by an incorrect API username, an incorrect API password, or an invalid API signature. Make sure that all three of these values are correct.
 
