Adding error descriptions (still in progress)

--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -14,7 +14,7 @@
 - agentName - Mandatory
 - parentFacilityCode - Mandatory
 - phoneNumber - Optional
-- Active - Optional (By default will be considered as "active")
+- Active - {True | False} - Optional (By default will be considered as "active")
 
 ### Return
 
@@ -53,6 +53,12 @@ b) parentfacilityCode in the API is a virtual facility registered earlier in Ope
 }   
 **Description**: This error will occur if "createVirtualFacility" request is received with a agentCode that is already registered in OpenLMIS. An agent can be updated by "updatevirtualFacility" API.
 
+#### 5) *Invalid value for "Active" field*
+**Response**:
+{        
+   "error": "Invalid status"      
+} 
+**Description**: The "Active" flag in API will accept only two values : {True | False}, being an optional field in API it can be kept null. However, OpenLMIS will check for valid values if it is not kept null.
 #### 5) *Malformed JSON*
 **Response**:  
 {        
