Adding error descriptions (still in progress)

--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -57,8 +57,9 @@ b) parentfacilityCode in the API is a virtual facility registered earlier in Ope
 **Response**:
 {        
    "error": "Invalid status"      
-} 
-**Description**: The "Active" flag in API will accept only two values : {True | False}, being an optional field in API it can be kept null. However, OpenLMIS will check for valid values if it is not kept null.
+}   
+**Description**: The "Active" flag in API will accept only two values : {True | False}, being an optional field in API it can be kept null. However, OpenLMIS will check for valid values if it is not null.
+
 #### 5) *Malformed JSON*
 **Response**:  
 {        
