--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -76,8 +76,7 @@ b) parentfacilityCode in the API is a virtual facility registered earlier in Ope
 
 ### Notes
 
-CommTrack will use this API to notify OpenLMIS everytime a new CHW is created. OpenLMIS will store agentCode as an identifier for this CHW/satellite facility and use it to match up successive reports coming from CHW.
-Error scenarios :-
+CommTrack will use this API to notify OpenLMIS everytime a new CHW is created. OpenLMIS will store agentCode as an identifier for this CHW/virtual facility and use it to match up successive reports coming from CHW.
 
 ### JSON: Coming soon
 
