Adding error descriptions (still in progress)

--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -12,9 +12,9 @@
 
 - agentCode - Mandatory ( reference to update below fields)
 - agentName - Mandatory
-- baseFacilityCode - Mandatory
+- parentFacilityCode - Mandatory
 - phoneNumber - Optional  
-- Active - Mandatory 
+- Active - {True | False} - Mandatory 
 
 ### Return
 
@@ -22,14 +22,59 @@
 
 ### Error scenarios
 
-- Invalid authentication
-- Invalid agentCode
-- Agent code is not tagged as satellite facility in OpenLMIS
-- Any mandatory field missing
-- Invalid baseFacilityCode
-- Invalid agentStatus
-- Malformed JSON
-- Unrecognized field
+#### 1) *Invalid authentication*  
+**Response**:    
+{  
+   "error": "Authentication Failed"  
+}   
+**Description**: This error can be caused by an incorrect API username, an incorrect API password, or an invalid API signature. Make sure that all three of these values are correct.
+
+#### 2) *Invalid agentCode*
+**Response**:  
+{  
+   "error": "Invalid agentCode"  
+} 
+**Description**: This error will occur if:-   
+a) agentCode is not registered in OpenLMIS.  
+b) agentCode is not a virtual facility in OpenLMIS (Update cannot be made on regular OpenLMIS facilities).
+
+#### 3) *Any mandatory field missing*
+**Response**:  
+{    
+   "error": "Mandatory field Missing"    
+}    
+**Description**: This error will occur if any of the manadatory field is either null or tag is missing.
+
+#### 4) *Invalid parentFacilityCode*
+**Response**:  
+{        
+   "error": "Invalid parentFacilityCode"      
+}  
+  
+**Description**: parentfacilityCode is the facilityCode of facilities registered in OpenLMIS and sent to CommTrack as part of "facilityMasterFeed". This error will occur if:-  
+a) parentfacilityCode in the API does not exist in OpenLMIS.  
+b) parentfacilityCode in the API is a virtual facility registered earlier in OpenLMIS. As a CHW (virtual facility) cannot be mapped to another CHW, OpenLMIS will check that parentFacilityCode should not be a virtual facility.
+
+#### 5) *Invalid value for "Active" field*
+**Response**:
+{        
+   "error": "Invalid status"      
+}   
+**Description**: The "Active" flag in API will accept only two values : {True | False}, being an optional field in API it can be kept null. However, OpenLMIS will check for valid values if it is not null.
+
+#### 6) *Malformed JSON*
+**Response**:  
+{        
+   "error": "Invalid JSON"      
+} 
+**Description**: This error will occur if there is some formatting error in JSON.
+
+#### 7) *Unrecognized field*
+**Response**:  
+{        
+   "error": "Invalid field found"      
+}  
+**Description**: This error will occur if any unrecognized field (apart from fields mentioned in parameters) is sent as part of API.
 
 
 ### Notes
