Adding error descriptions (still in progress)

--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -56,7 +56,7 @@ b) parentfacilityCode in the API is a virtual facility registered earlier in Ope
 #### 5) *Invalid value for "Active" field*
 **Response**:
 {        
-   "error": "Invalid status"      
+   "error": "Invalid agent status"      
 }   
 **Description**: The "Active" flag in API will accept only two values : {True | False}, being an optional field in API it can be kept null. However, OpenLMIS will check for valid values if it is not null.
 
