--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -54,25 +54,32 @@ b) parentfacilityCode in the API is a virtual facility registered earlier in Ope
 **Description**: This error will occur if "createVirtualFacility" request is received with a agentCode that is already registered in OpenLMIS. An agent can be updated by "updatevirtualFacility" API.
 
 #### 5) *Invalid value for "Active" field*
-**Response**:
+**Response**:  
 {        
-   "error": "Invalid agent status"      
+   "error": "Bad request"      
 }   
 **Description**: The "Active" flag in API will accept only two values : {True | False}, being an optional field in API it can be kept null. However, OpenLMIS will check for valid values if it is not null.
 
 #### 6) *Malformed JSON*
-**Response**:  
-{        
-   "error": "Invalid JSON"      
-} 
+**Response**:   
+{          
+   "error": "Bad request"        
+}   
 **Description**: This error will occur if there is some formatting error in JSON.
 
 #### 7) *Unrecognized field*
 **Response**:  
 {        
-   "error": "Invalid field found"      
+   "error": "Bad request"      
 }  
 **Description**: This error will occur if any unrecognized field (apart from fields mentioned in parameters) is sent as part of API.
+
+### 8) *Internal server error*
+**Response**:  
+{        
+   "error": "Something went wrong"      
+}  
+**Description**: This error will occur if request can not be processed due to some internal server error.
 
 ### Notes
 
