Adding error descriptions (still in progress)

--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -74,7 +74,7 @@ b) parentfacilityCode in the API is a virtual facility registered earlier in Ope
 }  
 **Description**: This error will occur if any unrecognized field (apart from fields mentioned in parameters) is sent as part of API.
 
-### 8) *Internal server error*
+#### 8) *Internal server error*
 **Response**:  
 {        
    "error": "Something went wrong"      
