Adding error descriptions (still in progress)

--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -58,23 +58,30 @@ b) parentfacilityCode in the API is a virtual facility registered earlier in Ope
 #### 5) *Invalid value for "Active" field*
 **Response**:  
 {        
-   "error": "Invalid status"      
+   "error": "Bad Request"      
 }   
 **Description**: The "Active" flag in API will accept only two values : {True | False}, being an optional field in API it can be kept null. However, OpenLMIS will check for valid values if it is not null.
 
 #### 6) *Malformed JSON*
 **Response**:  
 {        
-   "error": "Invalid JSON"      
+   "error": "Bad Request"      
 }  
 **Description**: This error will occur if there is some formatting error in JSON.
 
 #### 7) *Unrecognized field*
 **Response**:  
 {        
-   "error": "Invalid field found"      
+   "error": "Bad Request"      
 }  
 **Description**: This error will occur if any unrecognized field (apart from fields mentioned in parameters) is sent as part of API.
+
+#### 8) *Internal server error*
+**Response**:  
+{        
+   "error": "Something went wrong"      
+}  
+**Description**: This error will occur if request can not be processed due to some internal server error.
 
 
 ### Notes
