--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -42,7 +42,7 @@
 #### 3) *Invalid parentFacilityCode*
 **Response**:  
 {        
-   "error": "Invalid parentFacilityCode"      
+   "error": "Invalid FacilityCode"      
 }  
   
 **Description**: parentfacilityCode is the facilityCode of facilities registered in OpenLMIS and sent to CommTrack as part of "facilityMasterFeed". This error will occur if:-  
