Adding error descriptions (still in progress)

--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -45,7 +45,7 @@
    "error": "Invalid FacilityCode"      
 }  
   
-**Description**: parentfacilityCode is the facilityCode of facilities registered in OpenLMIS and sent to CommTrack as part of "facilityMasterFeed". This error will occur if:-  
+**Description**: parentfacilityCode is the Code of facility registered in OpenLMIS and sent to CommTrack as part of "facilityMasterFeed". This error will occur if:-  
 a) parentfacilityCode in the API does not exist in OpenLMIS.  
 b) parentfacilityCode in the API is a virtual facility registered earlier in OpenLMIS. As a CHW (virtual facility) cannot be mapped to another CHW, OpenLMIS will check that parentFacilityCode should not be a virtual facility.
 
