Adding error descriptions (still in progress)

--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -28,56 +28,62 @@
 #### 1) *Invalid authentication*  
 **Response**:    
 {  
-   "error": "Authentication Failed"  
+   "error": "Could not authenticate Vendor"  
 }   
 **Description**: This error can be caused by an incorrect API username, an incorrect API password, or an invalid API signature. Make sure that all three of these values are correct.
 
 #### 2) *Any mandatory field missing*
 **Response**:  
 {    
-   "error": "Mandatory field Missing"    
+   "error": "Missing mandatory fields"    
 }    
 **Description**: This error will occur if any of the manadatory field (agentCode, agentName or baseFacilityCode) is either null or tag is missing.
 
 #### 3) *Invalid parentFacilityCode*
 **Response**:  
 {        
-   "error": "Invalid FacilityCode"      
+   "error": "Invalid Facility code"      
 }  
   
-**Description**: parentfacilityCode is the Code of facility registered in OpenLMIS and sent to CommTrack as part of "facilityMasterFeed". This error will occur if:-  
-a) parentfacilityCode in the API does not exist in OpenLMIS.  
-b) parentfacilityCode in the API is a virtual facility registered earlier in OpenLMIS. As a CHW (virtual facility) cannot be mapped to another CHW, OpenLMIS will check that parentFacilityCode should not be a virtual facility.
+**Description**: parentfacilityCode is the Code of facility registered in OpenLMIS and sent to CommTrack as part of "facilityMasterFeed". This error will occur if parentfacilityCode in the API does not exist in OpenLMIS.  
 
-#### 4) *agentCode already exists*
+#### 4) *parentFacility is a virtual facility*
+**Response**:  
+{        
+   "error": "Parent facility can not be virtual facility"      
+}  
+  
+**Description**:This error will occur if parentfacilityCode in the API is a virtual facility registered earlier in OpenLMIS. As a CHW (virtual facility) cannot be mapped to another CHW, OpenLMIS will check that parentFacilityCode should not be a virtual facility.
+
+#### 5) *agentCode already exists*
 **Response**:  
 {        
    "error": "Agent already registered"      
 }   
 **Description**: This error will occur if "createVirtualFacility" request is received with a agentCode that is already registered in OpenLMIS. An agent can be updated by "updatevirtualFacility" API.
 
-#### 5) *Invalid value for "Active" field*
+#### 6) *Invalid value for "Active" field*
 **Response**:  
 {        
    "error": "Bad request"      
 }   
 **Description**: The "Active" flag in API will accept only two values : {True | False}, being an optional field in API it can be kept null. However, OpenLMIS will check for valid values if it is not null.
 
-#### 6) *Malformed JSON*
+#### 7) *Malformed JSON*
 **Response**:   
 {          
    "error": "Bad request"        
 }   
 **Description**: This error will occur if there is some formatting error in JSON.
 
-#### 7) *Unrecognized field*
+#### 8) *Unrecognized field*
 **Response**:  
 {        
    "error": "Bad request"      
 }  
 **Description**: This error will occur if any unrecognized field (apart from fields mentioned in parameters) is sent as part of API.
 
-#### 8) *Internal server error*
+#### 9) *Internal server error*
 **Response**:  
 {        
    "error": "Something went wrong"      
