Adding error descriptions (still in progress)

--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -51,35 +51,41 @@ b) agentCode is not a virtual facility in OpenLMIS (Update cannot be made on reg
 #### 4) *Invalid parentFacilityCode*
 **Response**:  
 {        
-   "error": "Invalid parentFacilityCode"      
+   "error": "Invalid Facility code"      
 }  
   
-**Description**: parentfacilityCode is the facilityCode of facilities registered in OpenLMIS and sent to CommTrack as part of "facilityMasterFeed". This error will occur if:-  
-a) parentfacilityCode in the API does not exist in OpenLMIS.  
-b) parentfacilityCode in the API is a virtual facility registered earlier in OpenLMIS. As a CHW (virtual facility) cannot be mapped to another CHW, OpenLMIS will check that parentFacilityCode should not be a virtual facility.
+**Description**: parentfacilityCode is the Code of facility registered in OpenLMIS and sent to CommTrack as part of "facilityMasterFeed". This error will occur if parentfacilityCode in the API does not exist in OpenLMIS.  
 
-#### 5) *Invalid value for "Active" field*
+#### 5) *parentFacility is a virtual facility*
+**Response**:  
+{        
+   "error": "Parent facility can not be virtual facility"      
+}  
+  
+**Description**:This error will occur if parentfacilityCode in the API is a virtual facility registered earlier in OpenLMIS. As a CHW (virtual facility) cannot be mapped to another CHW, OpenLMIS will check that parentFacilityCode should not be a virtual facility.
+
+#### 6) *Invalid value for "Active" field*
 **Response**:  
 {        
    "error": "Bad Request"      
 }   
 **Description**: The "Active" flag in API will accept only two values : {True | False}, being an optional field in API it can be kept null. However, OpenLMIS will check for valid values if it is not null.
 
-#### 6) *Malformed JSON*
+#### 7) *Malformed JSON*
 **Response**:  
 {        
    "error": "Bad Request"      
 }  
 **Description**: This error will occur if there is some formatting error in JSON.
 
-#### 7) *Unrecognized field*
+#### 8) *Unrecognized field*
 **Response**:  
 {        
    "error": "Bad Request"      
 }  
 **Description**: This error will occur if any unrecognized field (apart from fields mentioned in parameters) is sent as part of API.
 
-#### 8) *Internal server error*
+#### 9) *Internal server error*
 **Response**:  
 {        
    "error": "Something went wrong"      
