Adding error descriptions (still in progress)

--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -30,7 +30,7 @@
 {  
    "error": "Could not authenticate Vendor"  
 }   
-**Description**: This error can be caused by an incorrect API username, an incorrect API password, or an invalid API signature. Make sure that all three of these values are correct.
+**Description**: This error can be caused by an incorrect API username or an incorrect API password. Make sure that all three of these values are correct.
 
 #### 2) *Any mandatory field missing*
 **Response**:  
