--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -30,7 +30,7 @@
 {  
    "error": "Could not authenticate Vendor"  
 }   
-**Description**: This error can be caused by an incorrect API username or incorrect API password. Make sure that all three of these values are correct.
+**Description**: This error can be caused by an incorrect API username or incorrect API password.
 
 #### 2) *Invalid agentCode*
 **Response**:  
