Updating error messages

--- a/4.1-RegisterAgentAPI.md
+++ b/4.1-RegisterAgentAPI.md
@@ -28,7 +28,7 @@
 #### 1) *Invalid authentication*  
 **Response**:    
 {  
-   "error": "Could not authenticate Vendor"  
+   "error": "Authentication Failed"  
 }   
 **Description**: This error can be caused by an incorrect API username or an incorrect API password. 
 
@@ -65,7 +65,7 @@
 #### 6) *Invalid value for "Active" field*
 **Response**:  
 {        
-   "error": "Bad request"      
+   "error": "Active should be True/False"      
 }   
 **Description**: The "Active" flag in API will accept only two values : {True | False}, being an optional field in API it can be kept null. However, OpenLMIS will check for valid values if it is not null.
 
