--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -46,7 +46,7 @@ b) agentCode is not a virtual facility in OpenLMIS (Update cannot be made on reg
 {    
    "error": "Mandatory field Missing"    
 }    
-**Description**: This error will occur if any of the manadatory field is either null or tag is missing.
+**Description**: This error will occur if any of the manadatory field tag is missing,  blank tag will be considered as invalid value (not missing value).
 
 #### 4) *Invalid parentFacilityCode*
 **Response**:  
