Updating error messages

--- a/4.2-UpdateAgentAPI.md
+++ b/4.2-UpdateAgentAPI.md
@@ -28,7 +28,7 @@
 #### 1) *Invalid authentication*  
 **Response**:    
 {  
-   "error": "Could not authenticate Vendor"  
+   "error": "Authentication Failed"  
 }   
 **Description**: This error can be caused by an incorrect API username or incorrect API password.
 
