--- a/4.1-CreateVirtualFacility API.md
+++ b/4.1-CreateVirtualFacility API.md
@@ -94,5 +94,11 @@
 
 CommTrack will use this API to notify OpenLMIS everytime a new CHW is created. OpenLMIS will store agentCode as an identifier for this CHW/virtual facility and use it to match up successive reports coming from CHW.
 
-### JSON: Coming soon
+### JSON
+
+{"agentCode":"A2",  
+"agentName":"AgentVinod",  
+"parentFacilityCode":"F10",  
+"phoneNumber":"0099887766",  
+"active":"true"}
 
