--- a/4.2-UpdateVirtualFacility API.md
+++ b/4.2-UpdateVirtualFacility API.md
@@ -97,4 +97,10 @@ b) agentCode is not a virtual facility in OpenLMIS (Update cannot be made on reg
 
 CommTrack will use this API to notify OpenLMIS of updates to CHW.
 
-### JSON: Coming soon
+### JSON
+
+{"agentCode":"A2",  
+"agentName":"AgentVinod",  
+"parentFacilityCode":"F10",  
+"phoneNumber":"0099887766",  
+"active":"true"}
