--- a/3.2-ProgramProduct API.md
+++ b/3.2-ProgramProduct API.md
@@ -57,4 +57,19 @@
 
 CommTrack will use this program-product data for supporting the replenishment process with Clinicians / CHWs, and submitting Reports to OpenLMIS. All active products approved for a program will be avaliable to the CHW through OpenLMIS. CHWs inherit the facility type of their "home" or "base" facility, and the products made available to CHWs through their base facility can be further constrained within CommTrack. This approach can be revised once CommTrack introduces the notion of facility type.
 
-### JSON: Coming soon
+### JSON
+
+{"programProductList":[{"programCode":"HIV",  
+"programName":"HIV",  
+"productCode":"P10",  
+"productName":"antibiotic",  
+"description":"TDF/FTC/EFV",  
+"unit":10,  
+"category":"Antibiotics"},  
+{"programCode":"HIV",  
+"programName":"HIV",  
+"productCode":"P11",  
+"productName":"antibiotic",  
+"description":"TDF/FTC/EFV",  
+"unit":10,  
+"category":"Antibiotics"}]}
