--- a/3.1-ProgramCatalogChanges.md
+++ b/3.1-ProgramCatalogChanges.md
@@ -15,7 +15,7 @@ CommTrack will use this feed to determine what program has been updated. OpenLMI
 
 ### Sample feed
 
-'''xml
+```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
  <title>Event feed</title>
@@ -35,4 +35,4 @@ CommTrack will use this feed to determine what program has been updated. OpenLMI
    <content type="application/vnd.atomfeed+xml"><![CDATA[{"programCode":"HIV","programName":"HIV"}]]></content>
  </entry>
 </feed>
-'''
+```
