--- a/3.2-ProgramProduct API.md
+++ b/3.2-ProgramProduct API.md
@@ -59,6 +59,7 @@ CommTrack will use this program-product data for supporting the replenishment pr
 
 ### JSON
 
+```xml
 {"programProductList":[{"programCode":"HIV",  
 "programName":"HIV",  
 "productCode":"P10",  
@@ -73,3 +74,4 @@ CommTrack will use this program-product data for supporting the replenishment pr
 "description":"TDF/FTC/EFV",  
 "unit":10,  
 "category":"Antibiotics"}]}
+```
