--- a/1.1-Facility API.md
+++ b/1.1-Facility API.md
@@ -47,6 +47,10 @@ Note : Lables need to be decided
 - facilityComments
 - enabled
 - lastModifiedDate
+- Programs (programs currently active at the facility,  zero or more records)  
+{   programCode1  
+    programCode2  
+    etc.  }
 
 ### Error scenarios
 
