Updating API return content

--- a/1.1-Facility API.md
+++ b/1.1-Facility API.md
@@ -14,39 +14,37 @@
 
 ### Return
 
-Note : Lables need to be decided 
-- facilityCode
-- facilityName
+- code
+- name
 - facilityType
-- facilityDescription
-- GLN
-- facilityMainPhone
-- facilityFax
-- facilityAddress1
-- facilityAddress2
+- description
+- gln
+- mainPhone
+- fax
+- address1
+- address2
 - geographicZone
 - catchmentPopulation
-- facilityLAT
-- facilityLONG
-- facilityAltitude
-- facilityOperatedBy
+- latitude
+- longitude
+- altitude
+- operatedBy
 - coldStorageGrossCapacity
 - coldStorageNetCapacity
-- facilitySuppliesOthers
-- facilityIsSDP
-- facilityHasElectrity
-- facilityIsOnline
-- facilityHasElectronicSCC
-- facilityHasElectronicDAR
-- facilityIsActive
-- facilityGoLiveDate
-- facilityGoDownDate
-- facilityIsSatellite
-- facilityIsVirtual
-- parentfacilityCode
-- facilityComments
+- suppliesOthers
+- sdp
+- hasElectricity
+- online
+- hasElectricity
+- hasElectronicDAR
+- active
+- goLiveDate
+- goDownDate
+- satellite
+- virtualFacility
+- parentFacility
+- comment
 - enabled
-- lastModifiedDate
 - Programs (programs currently active at the facility,  zero or more records)  
 {   programCode1  
     programCode2  
