--- a/1.1-Facility API.md
+++ b/1.1-Facility API.md
@@ -48,7 +48,9 @@
 - Programs (programs currently active at the facility,  zero or more records)  
 {   programCode1  
     programCode2  
-    etc.  }
+    etc.  }   
+
+### Note : If the value of field is null is OpenLMIS, that field tag will not be included in the response. It is the standard that will be maintained in all the API responses.
 
 ### Error scenarios
 
