Adding note about null fields in response

--- a/1.1-Facility API.md
+++ b/1.1-Facility API.md
@@ -50,7 +50,9 @@
     programCode2  
     etc.  }   
 
-### Note : If the value of field is null is OpenLMIS, that field tag will not be included in the response. It is the standard that will be maintained in all the API responses.
+### Note :   
+
+If the value of field is null is OpenLMIS, that field tag will not be included in the response. It is the standard that will be maintained in all the API responses.
 
 ### Error scenarios
 
