--- a/4.2-UpdateVirtualFacility API.md
+++ b/4.2-UpdateVirtualFacility API.md
@@ -1,106 +1,124 @@
 # Update virtual facility API
 
-### Communication Type
+#### Communication Type
 
-- HTTP PUT, to OpenLMIS
+- HTTP PUT on [https://\<host\>:\<port\>/rest-api/agents/{agentCode}](#)
 
-### Authentication
+(wherein agentCode is the code for which given parameters needs to be updated) 
 
-- Authentication token (Base64 encrypted string containing username:password)
+#### Authentication
+- HTTP Basic Authentication (Base64 encrypted string containing username:password)
 
-### Parameters
-
-- agentCode - Mandatory ( reference to update below fields)
+#### Parameters
 - agentName - Mandatory
 - parentFacilityCode - Mandatory
 - phoneNumber - Optional  
-- Active - {True | False} - Mandatory 
+- Active - {true | false} - Mandatory 
 
-### Return
+#### Return
 
-#### Success
+###### Success
+```json
 {  
-   "Success": "Success message"  
-} 
+   "Success": "CHW updated successfully"  
+}
+```
 
-### Error scenarios
+###### Error scenarios
 
-#### 1) *Invalid authentication*  
-**Response**:    
+1. *Invalid authentication*  
+**Response**:  
+```json
 {  
    "error": "Authentication Failed"  
-}   
-**Description**: This error can be caused by an incorrect API username or incorrect API password.
+}
+```
+**Description**: This error can be caused by an incorrect API username or incorrect API password.  
 
-#### 2) *Invalid agentCode*
+2. *Invalid agentCode*  
 **Response**:  
+```json
 {  
    "error": "Invalid agentCode"  
-}  
+}
+```
 **Description**: This error will occur if:-   
 a) agentCode is not registered in OpenLMIS.  
 b) agentCode is not a virtual facility in OpenLMIS (Update cannot be made on regular OpenLMIS facilities).
 
-#### 3) *Any mandatory field missing*
+3. *Any mandatory field missing*  
 **Response**:  
+```json
 {    
    "error": "Mandatory field Missing"    
-}    
+}
+```
 **Description**: This error will occur if any of the manadatory field tag is missing,  blank tag will be considered as invalid value (not missing value).
 
-#### 4) *Invalid parentFacilityCode*
+4. *Invalid parentFacilityCode*  
 **Response**:  
+```json
 {        
    "error": "Invalid Facility code"      
-}  
-  
+}
+```
 **Description**: parentfacilityCode is the Code of facility registered in OpenLMIS and sent to CommTrack as part of "facilityMasterFeed". This error will occur if parentfacilityCode in the API does not exist in OpenLMIS.  
 
-#### 5) *parentFacility is a virtual facility*
+5. *parentFacility is a virtual facility*  
 **Response**:  
+```json
 {        
    "error": "Parent facility can not be virtual facility"      
 }  
-  
+```
 **Description**:This error will occur if parentfacilityCode in the API is a virtual facility registered earlier in OpenLMIS. As a CHW (virtual facility) cannot be mapped to another CHW, OpenLMIS will check that parentFacilityCode should not be a virtual facility.
 
-#### 6) *Invalid value for "Active" field*
+6. *Invalid value for "Active" field*  
 **Response**:  
+```json
 {        
    "error": "Bad Request"      
-}   
-**Description**: The "Active" flag in API will accept only two values : {True | False}, being an optional field in API it can be kept null. However, OpenLMIS will check for valid values if it is not null.
-
-#### 7) *Malformed JSON*
+}
+```
+**Description**: The "Active" flag in API will accept only two values : {True | False}  
+7. *Malformed JSON*  
 **Response**:  
+```json
 {        
    "error": "Bad Request"      
-}  
+}
+```
 **Description**: This error will occur if there is some formatting error in JSON.
 
-#### 8) *Unrecognized field*
+8. *Unrecognized field*  
 **Response**:  
+```json
 {        
    "error": "Bad Request"      
 }  
+```
 **Description**: This error will occur if any unrecognized field (apart from fields mentioned in parameters) is sent as part of API.
 
-#### 9) *Internal server error*
+9. *Internal server error*  
 **Response**:  
+```json
 {        
    "error": "Something went wrong"      
-}  
+}
+```
 **Description**: This error will occur if request can not be processed due to some internal server error.
 
 
-### Notes
+#### Notes
 
 CommTrack will use this API to notify OpenLMIS of updates to CHW.
 
-### JSON
-
-{"agentCode":"A2",  
-"agentName":"AgentVinod",  
+#### sample request JSON
+```json
+{
+"agentName":"virtual facility xyz",  
 "parentFacilityCode":"F10",  
-"phoneNumber":"0099887766",  
-"active":"true"}
+"phoneNumber":"998877661122",  
+"active":true
+}
+```
