--- a/4.2-UpdateVirtualFacility API.md
+++ b/4.2-UpdateVirtualFacility API.md
@@ -2,12 +2,11 @@
 
 #### Communication Type
 
-- HTTP PUT on [https://\<host\>:\<port\>/rest-api/agents/{agentCode}](#)
-
+- HTTP PUT on [/rest-api/agents/{agentCode}](#)  
 (wherein agentCode is the code for which given parameters needs to be updated) 
 
 #### Authentication
-- HTTP Basic Authentication (Base64 encrypted string containing username:password)
+- [HTTP Basic Authentication](http://www.httpwatch.com/httpgallery/authentication/) (Base64 encoded string containing username:password)
 
 #### Parameters
 - agentName - Mandatory
