--- a/4.2-UpdateVirtualFacility API.md
+++ b/4.2-UpdateVirtualFacility API.md
@@ -121,3 +121,6 @@ CommTrack will use this API to notify OpenLMIS of updates to CHW.
 "active":true
 }
 ```
+
+#### Related Documentation
+[POST /rest-api/agents](https://github.com/OpenLMIS/documents/blob/master/4.1-CreateVirtualFacility%20API.md)
